# Make-and-CMake-Examples

./: .gitignore  CMakeLists.txt  Makefile  README.md
examples/: .gitignore
examples/1/: .gitignore  CMakelists.txt  build.sh  run.sh
examples/1/Assignment/: .gitignore  CMakelists.txt
examples/1/Assignment/Assignment/: .gitignore  Config.cmake
examples/1/Assignment/AssignmentDLL/: .gitignore  CAssigment.cpp  Config.cmake
examples/1/Assignment/AssignmentDLL/lib/: .gitignore  libsndfile.dylib
examples/1/Assignment/Assignment_Console/: Config.cmake
test/: CMakeLists.txt  main.c  test_mtx.c
